# aif

./: .env_template  .gitignore  CLAUDE.local.m_  CLAUDE.md  LICENSE  LICENSE_APACHE_CC  README.md  pyproject.toml  pytest.ini  workspace.yaml
.claude/: settings.local.jso_
aif/_template/: README  dwh_schema_init.py
aif/_template/asset_templates/: asset_db_object.p_  asset_schema.p_  asset_table_etl.p_
aif/_template/src_templates/: table_etl.p_
aif/ai_analytics/: definitions.py
aif/ai_analytics/dwh_finance/: __init__.py  definitions.py
aif/ai_analytics/dwh_finance/core_fin_data_yf/: __init__.py
aif/ai_analytics/dwh_finance/core_fin_data_yf/notebooks/: ohlc_explore.ipynb
aif/ai_analytics/dwh_finance/core_fin_data_yf/wf/: __init__.py  asset_ohlc_daily.py  asset_ohlc_daily_new_high.py  asset_schema.py
aif/ai_analytics/dwh_finance/raw_fin_data_yf/: __init__.py
aif/ai_analytics/dwh_finance/raw_fin_data_yf/src/: ohlc_daily_etl.py
aif/ai_analytics/dwh_finance/raw_fin_data_yf/wf/: __init__.py  asset_ohlc_daily.py  asset_schema.py
aif/ai_analytics/dwh_use_cases/: __init__.py  definitions.py
aif/ai_analytics/dwh_use_cases/placeholder_schema/: __init__.py
aif/ai_analytics/dwh_use_cases/placeholder_schema/wf/: __init__.py  asset_schema.py
aif/ai_analytics/resources/config/dev/: dwh.yaml
aif/common/aif/src/: __init__.py  aif_logging.py  config.py  initialization.py  license.py
aif/common/dagster/: __init__.py  asset_db.py  asset_etl.py  util.py
resources/ai/tasks/: create_db_obj.md  create_etl.md  create_schema.md
resources/data/: PLACEHOLDER
(+18 files in other folders)
